added resource upload capabilities to ReST API
